--- a/app-ui/package.json
+++ b/app-ui/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@projectstorm/react-diagrams": "^6.7.0",
+    "@projectstorm/react-diagrams-core": "^6.7.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "storm-react-diagrams": "^5.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
